2006-10-11  Per Bothner  <per@bothner.com>

	* Base64Binary.java (toString): Fix buglet.

2006-10-06  Per Bothner  <per@bothner.com>

	* KProcessingInstruction.java (coerceOrNullMethod): Fix buglet.

	* XTimeType.java (fixedTimeZone): New static field and helper method.
	(now): Use fxiedTimeZone to match XQuery specification.
	(parseDateTime): New static helepr method.
	(valueOf): Use parseDateTime

2006-09-30  Per Bothner  <per@bothner.com>

	* Document.java (parse, parseCached): Use new writeDocumentUri
	rather than incorrect writeBaseUri.

	* AncestorAxis.java (scan):  Fix logic error.
	* AncestorOrSelfAxis.java (svan): Likewise.

2006-09-28  Per Bothner  <per@bothner.com>

	* XTimeType.java (now): Also set TIMEZONE_MASK and hence timezone.

2006-09-14  Per Bothner  <per@bothner.com>

	* KNode.java (getNodeValue): New static methods.
	(getNodeValue): Use new method.
	* KElement.java (getAttribute, getAttributeNS, getAttributeNode,
	getAttributeNS): New implementations.
	(hasAttribute, hasAttributeNS): Optimization.
	* KAttr.java (getObjectValue): New static method.
	(getObjectValue): Use new method.
	* KProcessingInstruction.java (getNodeName): Fix copy-paste error.

	* KNode.java: Fix PreProcessing so we don't use org.w3c.dom
	except when use:org.w3c.dom.Node is selected.
	* KCharacterData.java: Likweise.
	* KElement.java: Likewise.
	* KComment.java: Likewise.
	* KAttr.java: Likewise.
	* KText.java: Likewise.
	* KCDATASection.java: Likewise.
	* KDocument.java: Likewise.
	* Nodes.java: Likewise.
	* KProcessingInstruction.java: Likewise.

	* XDataType.java (toURI): Make public.

	* AttributeAxis.java (scan): Optimize - break when no more attributes.

	* ChildAxis.java (scan): Make use of new filtering fileChildPos method.

2006-09-13  Per Bothner  <per@bothner.com>

	* KProcessingInstruction.java (getNodeType): Fix cut-and-paste error.

	* Document.java (close): New method.
	* KNode.java (toString): Add missing close call on XMLPrinter.
